tests/functional2/lang/list/eval-fail-2.err.exp
error: expected a list but found an integer: 8
       at /pwd/in.nix:1:2:
            1| 8++1
             |  ^
            2|
